Bug 84890 - [BYT/BSW]igt/drv_debugfs_reader sporadically causes *ERROR* Panel is unable to calculate CRC after 6 vblanks
Summary: [BYT/BSW]igt/drv_debugfs_reader sporadically causes *ERROR* Panel is unable t...
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: All Linux (All)
: medium normal
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-10-11 03:24 UTC by lu hua
Modified: 2017-10-06 14:34 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments
dmesg (118.61 KB, text/plain)
2014-10-11 03:24 UTC, lu hua
no flags Details

Description lu hua 2014-10-11 03:24:11 UTC
Created attachment 107689 [details]
dmesg

==System Environment==
--------------------------
Regression: not sure, unstable

Non-working platforms: BYT

==kernel==
--------------------------
drm-intel-nightly/ea4bec8e96ea8b33b49a7892c1c7f20041a56da6

==Bug detailed description==
-----------------------------
It sporadically causes "*ERROR* Panel is unable to calculate CRC after 6 vblanks" when run automation testing.Fail rate: 1/5. Clean boot system then run binary 5 cycles, it works well. 

Run case list:
Intel_gpu_tools/igt_core_getclient    PASS
Intel_gpu_tools/igt_core_get_client_auth_master-drop    PASS
Intel_gpu_tools/igt_core_get_client_auth_simple    PASS
Intel_gpu_tools/igt_core_getstats    PASS
Intel_gpu_tools/igt_core_getversion    PASS
Intel_gpu_tools/igt_debugfs_emon_crash    PASS
Intel_gpu_tools/igt_drm_import_export_flink    PASS
Intel_gpu_tools/igt_drm_import_export_prime    PASS
Intel_gpu_tools/igt_drm_vma_limiter    PASS
Intel_gpu_tools/igt_drm_vma_limiter_cached    PASS
Intel_gpu_tools/igt_drm_vma_limiter_cpu    PASS
Intel_gpu_tools/igt_drm_vma_limiter_gtt    PASS
Intel_gpu_tools/igt_drv_debugfs_reader    DMESG_WARN      reboot


run log:
Test Environment check: Succeeded.
[1/1] dmesg-warn: 1 Running Test(s): 0
[1/1] dmesg-warn: 1 Running Test(s): 1
Thank you for running Piglit!
Results have been written to /GFX/Test/Piglit/piglit/t
{
    "results_version": 1,
    "time_elapsed": 0.7119438648223877,
    "tests": {
        "igt/drv_debugfs_reader": {
            "dmesg": "[ 1575.354677] [drm:intel_dp_sink_crc] *ERROR* Panel is unable to calculate CRC after 6 vblanks",
            "returncode": 0,
            "err": "",
            "environment": "PIGLIT_SOURCE_DIR=\"/GFX/Test/Piglit/piglit\" PIGLIT_PLATFORM=\"mixed_glx_egl\"",
            "command": "/GFX/Test/Intel_gpu_tools/intel-gpu-tools/tests/drv_debugfs_reader",
            "result": "dmesg-warn",
            "time": 0.5496139526367188,
            "out": ""
        }
    },
    "name": "t",
    "options": {
        "profile": [
            "tests/igt.py"
        ],
        "dmesg": false,
        "execute": true,
        "platform": "mixed_glx_egl",
        "valgrind": false,
        "sync": false,
        "filter": [
            "igt/drv_debugfs_reader$"
        ],
        "concurrent": "some",
        "exclude_tests": [],
        "env": {


==Reproduce steps==
---------------------------- 
1. run above case list 5 cycles.
Comment 1 lu hua 2014-11-12 07:23:24 UTC
I reproduce this error on BSW.  It happens 1 in 6 runs.
[root@x-bsw01 tests]# ./drv_debugfs_reader
[root@x-bsw01 tests]# dmesg -r|egrep "<[1-4]>"|grep drm
<3>[  121.944420] [drm:intel_dp_sink_crc [i915]] *ERROR* Panel is unable to calculate CRC after 6 vblanks

[  109.270270] [drm:edp_panel_vdd_on] Turning eDP port C VDD on
[  109.270285] [drm:edp_panel_vdd_on] PP_STATUS: 0x80000008 PP_CONTROL: 0xabcd000f
[  112.286421] [drm:edp_panel_vdd_off_sync] Turning eDP port C VDD off
[  112.286436] [drm:edp_panel_vdd_off_sync] PP_STATUS: 0x80000008 PP_CONTROL: 0xabcd0007
[  121.655828] [drm:edp_panel_vdd_on] Turning eDP port C VDD on
[  121.655842] [drm:edp_panel_vdd_on] PP_STATUS: 0x80000008 PP_CONTROL: 0xabcd000f
[  121.944420] [drm:intel_dp_sink_crc [i915]] *ERROR* Panel is unable to calculate CRC after 6 vblanks
[  124.670970] [drm:edp_panel_vdd_off_sync] Turning eDP port C VDD off
[  124.670984] [drm:edp_panel_vdd_off_sync] PP_STATUS: 0x80000008 PP_CONTROL: 0xabcd0007
[  125.392085] [drm:edp_panel_vdd_on] Turning eDP port C VDD on
[  125.392100] [drm:edp_panel_vdd_on] PP_STATUS: 0x80000008 PP_CONTROL: 0xabcd000f
[  128.415147] [drm:edp_panel_vdd_off_sync] Turning eDP port C VDD off
[  128.415161] [drm:edp_panel_vdd_off_sync] PP_STATUS: 0x80000008 PP_CONTROL: 0xabcd0007
Comment 2 Daniel Vetter 2014-11-19 10:46:39 UTC
Patch to tune down the error message landed in dinq:

commit df86fedba6691761401f4f560bc16b3181d36d9f
Author: Daniel Vetter <daniel.vetter@ffwll.ch>
Date:   Wed Nov 19 11:18:47 2014 +0100

    drm/i915: Tune down sink crc timeout dmesg output
Comment 3 Guo Jinxian 2014-11-20 05:48:37 UTC
(In reply to Daniel Vetter from comment #2)
> Patch to tune down the error message landed in dinq:
> 
> commit df86fedba6691761401f4f560bc16b3181d36d9f
> Author: Daniel Vetter <daniel.vetter@ffwll.ch>
> Date:   Wed Nov 19 11:18:47 2014 +0100
> 
>     drm/i915: Tune down sink crc timeout dmesg output

I run 10 time for below cases on latest -nightly(cdb41f33d2a189531e3561f8d40327b8e1bb4e0e), didn't reproduce this issue. Verified.

Intel_gpu_tools/igt_core_getclient
Intel_gpu_tools/igt_core_get_client_auth_master-drop
Intel_gpu_tools/igt_core_get_client_auth_simple
Intel_gpu_tools/igt_core_getstats
Intel_gpu_tools/igt_core_getversion
Intel_gpu_tools/igt_debugfs_emon_crash
Intel_gpu_tools/igt_drm_import_export_flink
Intel_gpu_tools/igt_drm_import_export_prime
Intel_gpu_tools/igt_drm_vma_limiter
Intel_gpu_tools/igt_drm_vma_limiter_cached
Intel_gpu_tools/igt_drm_vma_limiter_cpu
Intel_gpu_tools/igt_drm_vma_limiter_gtt
Intel_gpu_tools/igt_drv_debugfs_reader
Comment 4 Elizabeth 2017-10-06 14:34:56 UTC
Closing old verified.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.